Implementação de autenticação com sanctum no backend
