# app-notifications-ms/app/Http/Middleware/Authenticate.php
@@ -12,6 +12,6 @@ class Authenticate extends Middleware
      */
     protected function redirectTo(Request $request): ?string
     {
-        return $request->expectsJson() ? null : route('login');
+        return response()->json(['error' => 'Unauthenticated.'], 401);
     }
 }
